# comeondosomething

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: main.yml
cli/: Cargo.toml
cli/src/: display.rs  json.rs  main.rs  style.rs
cli/tests/: test.rs
cods/: Cargo.toml
cods/src/: calc.rs  display.rs  dummy.rs  error.rs  eval.rs  ext.rs  group.rs  ident.rs  lib.rs  parse.rs  span.rs  stdio.rs  style.rs  token.rs  types.rs  util.rs
cods/src/check/: ast.rs  builtin.rs  funs.rs  mod.rs  op.rs  scope.rs  test.rs  types.rs
cods/src/eval/: mod.rs  scope.rs  stack.rs  test.rs  types.rs  val.rs  var.rs
cods/src/eval2/: mod.rs  test.rs
cods/src/group/: item.rs  mod.rs  test.rs
cods/src/lex/: mod.rs  str.rs  test.rs  token.rs
cods/src/parse/: builtin.rs  cst.rs  mod.rs  op.rs  parser.rs  test.rs
cods/src/token/: mod.rs  test.rs
cods/tests/: test.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: colorful_counting.cods  euclid_gcd  euclid_gcd.cods  pyramid  pyramid.cods  sum  sum.cods
files/: linux.calc
gtk/: Cargo.toml
gtk/src/: main.rs
src/: calc.rs  error.rs  lex.rs  lib.rs  main.rs  parse.rs  token.rs
tests/: test.rs
