[package]
name = "cods-cli"
version = "0.2.0"
authors = ["Saecki <tobiasschmitz2001@gmail.com>"]
description = "A statically typed scripting language"
edition = "2021"

[[bin]]
doc = false
name = "cods"
path = "src/main.rs"

[dependencies]
cods-derive = { path = "../derive" }
cods = { path = "../cods" }
unicode-width = "0.1.10"

[dev-dependencies]
assert_cmd = { version = "2.0.5", features = ["color"] }
